# ozon_parser

./: .gitignore  README.md  alembic.ini  gscript.js  pyproject.toml  requirements.txt  run.py  settings.py  setup.cfg  utils.py
alembic/versions/: cd20d1412de6_create_product_table.py
ozon_parser/: database.py  driver.py  main.py  parser.py  selectors.py  sheets.py
tests/: test_ozon_parser.py
