[tool.poetry]
name = "ozon_parser"
version = "0.1.0"
description = ""
authors = ["ckounter <gladunov.denis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
selenium = "^4.1.5"
google-api-python-client = "^2.47.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
lxml = "^4.8.0"
pytype = { version = "^2022.5.10", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
